--- a/src/EmptyTodos/EmptyTodos.css
+++ b/src/EmptyTodos/EmptyTodos.css
@@ -2,11 +2,14 @@
   position: absolute;
   display: flex;
   align-items: center;
-  top: 200px;
+  top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
   flex-direction: column;
   width: 500px;
-  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
 }
 
 .EmptyTodos-container p {
