--- a/src/TodoItem/TodoItem.css
+++ b/src/TodoItem/TodoItem.css
@@ -1,5 +1,5 @@
 .TodoItem {
-  background-color: #fafafa;
+  background-color: #faefc2;
   position: relative;
   display: flex;
   justify-content: center;
