--- a/src/TodoSearch/TodoSearch.css
+++ b/src/TodoSearch/TodoSearch.css
@@ -7,18 +7,20 @@
   width: calc(100% - 62px);
   font-size: 24px;
   text-align: center;
-  /* font-family: "Montserrat"; */
   font-weight: 400;
   color: #1e1e1f;
   box-shadow: 0px 5px 50px rgba(32, 35, 41, 0.25);
+  cursor: pointer;
 }
 
 .TodoSearch::placeholder {
   color: #a5a5a5;
-  font-family: "Montserrat";
   font-weight: 400;
 }
 
 .TodoSearch:focus {
   outline-color: #ce7095;
+}
+.TodoSearch:disabled {
+  opacity: 25%;
 }
